k8s/02-order-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-db
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-db
  template:
    metadata:
      labels:
        app: order-db
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["sh","-c","pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"]
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: order-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: order-db
  namespace: ecommerce
spec:
  selector:
    app: order-db
  ports:
    - port: 5432
      targetPort: 5432
